--- a/.screenrc
+++ b/.screenrc
@@ -1,5 +1,16 @@
 startup_message off
 altscreen on
+
+# Configure statusline at bottom of terminal
 hardstatus off
 hardstatus alwayslastline
-hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{W} %m-%d %{W} %c %{g}]'
+hardstatus string '%{= kG}%?[ %{G}%S %{g}]%:[ %{G}%H %{g}]%?[%= %{= kw}%?%-Lw%?%{r}(%{W}%n%f*%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{W} %D %M %d %{W}%c %{g}]'
+
+# Reload configuration
+bind r source ~/.screenrc
+
+# Choose window
+bind w windowlist -b
+
+# Remove current region
+bind x remove
