--- a/.screenrc
+++ b/.screenrc
@@ -20,3 +20,7 @@ bind h focus left
 bind j focus down
 bind k focus up
 bind l focus right
+
+# split windows nicely
+bind - split -h
+bind | split -v
