--- a/.screenrc
+++ b/.screenrc
@@ -32,3 +32,7 @@ bind | split -v
 
 bind n layout next
 bind p layout prev
+
+# In copy mode, use 'v' to start marking a region, and 'y' to yank it
+markkeys " =v"
+markkeys "^M=y"
