--- a/.screenrc
+++ b/.screenrc
@@ -39,3 +39,7 @@ bind ^[
 # In copy mode, use 'v' to start marking a region, and 'y' to yank it
 markkeys " =v"
 markkeys "^M=y"
+
+# Set caption for individual regions
+# "caption top ..." works in master, but not in 4.9.0
+caption splitonly "%?%F%{= g.}%:%{=d w.}%? %{W}%n%f %t%{-} %?%E[C-a]%?"
